@@ -1110,6 +1110,8 @@ UNFOL x y#
 PROP x y#
 ORDR x y#
 FLIP x y#
+MOTH X Y#
+
 
 KA   is a keep-alive message used to keep the connection alive when the client
      is idle and not sending any other messages (NATs and other routers can
@@ -1238,6 +1240,9 @@ ORDR repeats display of last-heard order from this player's leader.
      x and y are ignored
 
 FLIP requests flip to player's orientation, new facing toward x y
+
+MOTH requests the player's mother's position as spoken map coordinates.
+     x and y are ignored
 
 
 
